--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+.page {
+  background-color: white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
+  list-style-type: none;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* position: absolute; */
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 20px;
+  border-bottom: solid 2px;
+  padding-bottom: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.logoDiv {
+  margin-top: 20px;
+  margin-bottom: 0px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo {
+  height: 80px;
+}
+
+.pagenavigation {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  margin-bottom: 0px;
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding:0;
+
+  width: 100%;
+}
+
+.page__name {
+  font-size: 30px;
+  font-weight: 500;
+  margin: 10px;
+}
+
+.Name {
+  color: black;
+  text-decoration: none;
 }
